MarcoKitTests/TestData/error/number1.marco
--before
1.0f

--after
3: End of file expected, got 'f'
